# ht32-rs-nighlites

ht32f1xxxx/: Cargo.toml  README.md  build.rs
ht32f1xxxx/src/: lib.rs
ht32f1xxxx/src/ht32f12345/: adc.rs  bftm0.rs  ckcu.rs  device.x  ebi.rs  exti.rs  gpiod.rs  mod.rs  sci.rs  uart1.rs  usart0.rs  usart1.rs
ht32f1xxxx/src/ht32f12345/adc/: adc_dr9.rs  adc_hconv.rs  adc_hdr0.rs  adc_hdr1.rs  adc_htsr.rs  adc_ofr11.rs  adc_ofr12.rs  adc_ofr5.rs  adc_ofr6.rs  adc_rst.rs  adc_str0.rs  adc_str11.rs  adc_str14.rs  adc_str15.rs  adc_str4.rs  adc_str8.rs  adc_tcr.rs
ht32f1xxxx/src/ht32f12345/afio/: afio_gpacfglr.rs  afio_gpccfglr.rs  afio_gpdcfglr.rs
ht32f1xxxx/src/ht32f12345/ckcu/: ckcu_ahbccr.rs  ckcu_gccr.rs  ckcu_gcfgr.rs  ckcu_gcir.rs  ckcu_hsicr.rs  ckcu_mcudbgcr.rs
ht32f1xxxx/src/ht32f12345/cmp/: cmp_ier1.rs  cmp_tfr1.rs  cmp_valr0.rs
ht32f1xxxx/src/ht32f12345/crc/: crc_sdr.rs
ht32f1xxxx/src/ht32f12345/ebi/: ebi_atr2.rs  ebi_pcr.rs  ebi_pr2.rs  ebi_rtr0.rs  ebi_rtr1.rs  ebi_rtr2.rs  ebi_rtr3.rs  ebi_sr.rs  ebi_wtr1.rs
ht32f1xxxx/src/ht32f12345/exti/: exti_cfgr0.rs
ht32f1xxxx/src/ht32f12345/fmc/: fmc_cpsr.rs  fmc_ppsr0.rs
ht32f1xxxx/src/ht32f12345/gpioa/: gpioa_dinr.rs  gpioa_pur.rs  gpioa_srr.rs
ht32f1xxxx/src/ht32f12345/gpioc/: gpioc_drvr.rs
ht32f1xxxx/src/ht32f12345/gpiod/: gpiod_drvr.rs  (+2 more)
ht32f1xxxx/src/ht32f12364/: crc.rs  mod.rs  sci.rs  uart0.rs
ht32f1xxxx/src/ht32f12365_66/: afio.rs  exti.rs  gpioc.rs  i2c0.rs  mod.rs
ht32f5yyy/: Cargo.toml  README.md  build.rs
ht32f5yyy/src/: lib.rs
ht32f5yyy/src/ht32f5826/: cmp.rs  mod.rs  sctm0.rs
(+2659 files in other folders)
