[package]
edition = "2021"
name = "ht32f1xxxx"
version = "0.2.0"
authors = ["Henrik Böving <hargonix@gmail.com>", "ht32-rs Contributors"]
description = "Device support crates for HT32F1XXXX devices"
repository = "https://github.com/ht32-rs/ht32-rs"
readme = "README.md"
keywords = ["ht32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
vcell = "0.1.3"

[package.metadata.docs.rs]
features = ['rt', 'ht32f12345', 'ht32f12364', 'ht32f12365_66']
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
ht32f12345 = []
ht32f12364 = []
ht32f12365_66 = []
